# spotter

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: collab.rs  flashed.rs  kml.rs  list_spotter.list  main.rs  map.rs  spotter.rs
