[package]
name = "invaders"
version = "0.9.0"
authors = ["Damien Cuenot <damien.cuenot.c@thalesdigital.io>"]

[dependencies]
structopt = "0.2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.8"
select = "0.4"
regex = "1"
rand = "0.5.5"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0"
array_tool = "1.0.3"
quick-xml = "0.12.3"
curl = "0.4.15"